<resources>
    <string name="app_name">Colaboradores</string>
    <string name="title_activity_principal_menu">PrincipalMenu</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name_dummy">Lesly Herrera</string>
    <string name="name">Nombre</string>
    <string name="contact">Contacto</string>
    <string name="no_contacts">Aún no existen contactos agregados</string>
    <string name="name_collaboration">Nombre del colaborador</string>
    <string name="contact_add">Contacto</string>
    <string name="add_collaboration">Agregar colaborador</string>
    <string name="title_activity_ubication_collaborator">Map</string>
    <string name="my_collaborators">Mis colaboradores</string>
    <string name="add_from_file">Agregar desde archivo</string>
</resources>